   src/printing.c, src/project.c, src/search.c, src/ui_utils.c,
   src/vte.c:
   Deprecate ui_widget_set_tooltip_text() in favor of
   gtk_widget_set_tooltip_text().
 * configure.ac, doc/geany.html, doc/geany.txt, src/callbacks.c,
   src/keyfile.c, src/main.c, src/prefs.c, src/printing.c,
   src/printing.h:
   Enable GTK printing support unconditionally.


2011-06-11  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/dialogs.c, src/main.c, src/ui_utils.h:
   Always destroy open and save dialog after use. This also helps
   working around a long-living GTK+ bug, hopefully closing #3311258,
   #3304273, #3201050, #3163742, #3153120 and #2985896.


2011-06-03  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/callbacks.c, src/document.c, src/document.h, src/editor.c,
   src/search.c, src/search.h:
   Show the actual text the user searched for in messages rather than
   the internal one (patch by Eugene Arshinov, thanks).
 * src/search.c:
   Also use the actual user search in the combo box history.


2011-06-02  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c, src/document.h, src/ui_utils.c, src/ui_utils.h:
   Add ui_focus_current_document() and document_grab_focus().
 * src/project.c:
   Focus the editor widget after loading project session files.
 * scripts/create_py_tags.py:
   Ignore tags ending with an underscore.
   Dynamically determine the path of Python's standard library instead
   of hardcoding it.
   Parse all modules of the Python standard library instead of a
   hardcoded list of filenames.


2011-05-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.java:
   Move keyword 'enum' to primary keywords (closes #3305737).


2011-05-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/python.c:
   When checking for literal strings to ignore, consider also
   unicode, binary and raw strings.
 * src/plugins.c:
   Define and use get_plugin_path() always and move platform dependent