@@ -12,6 +12,8 @@
    src/keyfile.c, src/main.c, src/prefs.c, src/printing.c,
    src/printing.h:
    Enable GTK printing support unconditionally.
+ * doc/geany.html, doc/geany.txt:
+   Stop talking about pre-GTK 2.12 tricks.
 
 
 2011-06-11  Colomban Wendling  <colomban(at)geany(dot)org>
